; ModuleID = '/home/carl/AnghaBench/memcached/extr_thread.c_add_delta.c'
source_filename = "/home/carl/AnghaBench/memcached/extr_thread.c_add_delta.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @add_delta(i32* %0, i8* %1, i64 %2, i32 %3, i32 %4, i8* %5, i32* %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i8* %1, i8** %9, align 8
  store i64 %2, i64* %10, align 8
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i8* %5, i8** %13, align 8
  store i32* %6, i32** %14, align 8
  %17 = load i8*, i8** %9, align 8
  %18 = load i64, i64* %10, align 8
  %19 = call i32 @hash(i8* %17, i64 %18)
  store i32 %19, i32* %16, align 4
  %20 = load i32, i32* %16, align 4
  %21 = call i32 @item_lock(i32 %20)
  %22 = load i32*, i32** %8, align 8
  %23 = load i8*, i8** %9, align 8
  %24 = load i64, i64* %10, align 8
  %25 = load i32, i32* %11, align 4
  %26 = load i32, i32* %12, align 4
  %27 = load i8*, i8** %13, align 8
  %28 = load i32*, i32** %14, align 8
  %29 = load i32, i32* %16, align 4
  %30 = call i32 @do_add_delta(i32* %22, i8* %23, i64 %24, i32 %25, i32 %26, i8* %27, i32* %28, i32 %29)
  store i32 %30, i32* %15, align 4
  %31 = load i32, i32* %16, align 4
  %32 = call i32 @item_unlock(i32 %31)
  %33 = load i32, i32* %15, align 4
  ret i32 %33
}

declare dso_local i32 @hash(i8*, i64) #1

declare dso_local i32 @item_lock(i32) #1

declare dso_local i32 @do_add_delta(i32*, i8*, i64, i32, i32, i8*, i32*, i32) #1

declare dso_local i32 @item_unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
